--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.1-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 26 May 2022 09:42:13 +0900
+
 mkswu (4.0-1) experimental; urgency=low
 
   * upstream update (see changelog)
