locales: add --no-wrap to msgmerge
different debian versions do not wrap exactly the same way,
so check that ensures there were no modification started failing
after upgrade.

Not wrapping ensures identical output.

Also ensure 'make dist' re-runs the msgmerge step, otherwise
the test would fail to detect modifications depending on git
checkout order...

--- a/po/ja/mkimage.po
+++ b/po/ja/mkimage.po
@@ -11,8 +11,7 @@ msgid "Please install the atmark mkswu debian package and run mkswu instead"
 msgstr "mkswu パッケージをインストールしてから mkswu を使ってください。"
 
 #: mkimage.sh
-msgid ""
-"If you already had generated keys and/or images, you can use mkswu --import"
+msgid "If you already had generated keys and/or images, you can use mkswu --import"
 msgstr "すでに鍵等を作成済みの場合は、このディレクトリから"
 
 #: mkimage.sh
