--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.3-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 25 Jul 2022 13:50:48 +0900
+
 mkswu (4.2-1) experimental; urgency=low
 
   * upstream update (see changelog)
