--- a/po/mkswu.pot
+++ b/po/mkswu.pot
@@ -375,10 +375,13 @@ msgstr ""
 msgid "Info: using default aes key path"
 msgstr ""
 #: mkswu
-msgid "Could not update default ENCRYPT_KEYFILE in %s"
+msgid "Could not update %s in %s"
 msgstr ""
 #: mkswu
 msgid "%s already exists, skipping"
+msgstr ""
+#: mkswu
+msgid "%s already exists, generate new key? [Y/n]"
 msgstr ""
 #: mkswu
 msgid "Generating random number failed"
@@ -387,10 +390,10 @@ msgstr ""
 msgid "Created encryption keyfile %s"
 msgstr ""
 #: mkswu
-msgid "You must also enable aes encryption with examples/initial_setup.desc"
+msgid "Info: Adding %s to config"
 msgstr ""
 #: mkswu
-msgid "or equivalent"
+msgid "You must also enable aes encryption with initial_setup.desc or equivalent"
 msgstr ""
 #: mkswu
 msgid "PRIVKEY is not set in config file"
@@ -412,9 +415,6 @@ msgid "Creating signing key %s and its public counterpart %s"
 msgstr ""
 #: mkswu
 msgid "Generating certificate/key pair failed"
-msgstr ""
-#: mkswu
-msgid "Info: Adding %s to config"
 msgstr ""
 #: mkswu
 msgid "%s will be copied over to /etc/swupdate.pem when installing newly generated swu"
