--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.4-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Fri, 26 Aug 2022 10:37:52 +0900
+
 mkswu (4.3-1) experimental; urgency=low
 
   * upstream update (see changelog)
