--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.5-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 26 Sep 2022 10:41:02 +0900
+
 mkswu (4.4-1) experimental; urgency=low
 
   * upstream update (see changelog)
