locales: update locales for stdin
stdin patch added a new message but did not check for locale
update.
Add the line.

Fixes: fc5278206d70 ("mkswu: allow '-' as source file to read from stdin")
Change-Id: I4da14a5fee4ce7b6a4921a1f785a45f5da99d0fa

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -759,6 +759,10 @@ msgid "Config file not found, create one with mkswu --init"
 msgstr "設定ファイルが見つかりませんでした。 mkswu --init で作成してください。"
 
 #: mkswu
+msgid "Cannot guess output name from stdin"
+msgstr "- (stdin) の場合には --output を設定してください。"
+
+#: mkswu
 msgid "cannot enter %s directory"
 msgstr "%s ディレクトリに入れませんでした。"
 
