--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.6-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 20 Oct 2022 15:26:48 +0900
+
 mkswu (4.5-1) experimental; urgency=low
 
   * upstream update (see changelog)
