mkswu: cpio: disable cpio built-in crc if any file is >2GB
cpio (upstream and debian bullseye versions) has a bug and does not
correctly compute its own checksum for files bigger than 2GB:
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=962188

Since we already compute our own checksums just disable crc if
there is any bigger file.
(Note cpio does not allow for any file bigger than 4GB either,
we might want to catch that earlier and suggest to split the
file if that ever happens...? Splitting embedded container images
might prove interesting, but that is compressed size so hopefully
should not happen)

Change-Id: I6c8c3616b6c95ef825474df30c1168d4e8b59ebc

--- a/po/ja/mkswu.po
+++ b/po/ja/mkswu.po
@@ -451,6 +451,10 @@ msgid "Could not enter %s"
 msgstr "%s ディレクトリに入れませんでした。"
 
 #: mkswu
+msgid "Could not create SWU (cpio archive)"
+msgstr "SWU (cpio アーカイブ）の作成が失敗しました。"
+
+#: mkswu
 msgid "cpio does not contain files we requested (in the order we requested): check %s"
 msgstr "%s ファイルに設定した中身を確認できませんでした。"
 
