--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,11 @@
+4.7.1
+=====
+fixes:
+ - Fix 'Nothing to do' version check when rollback is disabled,
+the check was incorrectly disabled in this case in mkswu 4.7
+
+ -- 2022-11-28
+
 4.7
 ===
 breaking changes:
