--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.7.1-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 28 Nov 2022 11:06:32 +0900
+
 mkswu (4.7-1) experimental; urgency=low
 
   * upstream update (see changelog)
