--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.9-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Thu, 26 Jan 2023 08:10:01 +0900
+
 mkswu (4.8-1) experimental; urgency=low
 
   * upstream update (see changelog)
