--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+mkswu (4.10-1) experimental; urgency=low
+
+  * upstream update (see changelog)
+
+ -- Dominique Martinet <dominique.martinet@atmark-techno.com>  Mon, 27 Mar 2023 11:41:41 +0900
+
 mkswu (4.9-1) experimental; urgency=low
 
   * upstream update (see changelog)
