--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,12 @@
+4.10.1
+======
+fixes:
+ - fix 'mkswu -- <desc>' invocations
+ - fix swdesc_* --opt=value invocations
+ - add bash completion for --update-version
+
+ -- 2023-03-27
+
 4.10
 ====
 fixes:
